--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="shortcut icon"
+      href="static/imgs/favicon.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <h1>Hi Mom!</h1>
