--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="sass/styles.scss" />
     <link
       rel="shortcut icon"
       href="static/imgs/favicon.ico"
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <h1>Hi Mom!</h1>
+    <header><h1>Hi Mom!</h1></header>
     <p>How are you doing??</p>
     <script src="main.js"></script>
   </body>
